--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-57-precomposed.png" />
-    <title>Home Page</title>
+    <title>省到家</title>
 
 
     <link href="static/css/other/font-awesome.min.css" rel="stylesheet"/>
