--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -48,10 +48,12 @@
     <script type="text/javascript" src="static/js/shengdaojia/smoothscroll.js"></script>
     <script type="text/javascript" src="static/js/shengdaojia/ajax-mail.js"></script>
 
-
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="static/js/shengdaojia/bootstrap.min.js"></script>
     <script src="static/js/bootstrap/bootstrap-table.js"></script>
     <script src="static/js/bootstrap/bootstrap-table-zh-CN.min.js"></script>
     <script src="static/js/bootstrap/bootstrap-select.min.js"></script>
+
     <script type="text/javascript" src="static/js/index/index.js"></script>
     <script type="text/javascript" src="static/js/index/indexOperate.js"></script>
 
@@ -76,7 +78,7 @@
     <div class="container"   style="width:80%;" >
         <div class="row header-top">
             <div class="span5 logo" style="width: 100px;height: 100px;background: #1cc09f;">
-                <a class="logo-img" href="./index.html" title="responsive template"><img src="example/logo.png" alt="Tabulate" /></a>
+                <a class="logo-img" href="./index.html" title="responsive template"><img src="/static/images/background_menu.png" alt="Tabulate" /></a>
 
             </div>
             <div class="span7 social-container">
