--- a/src/main/resources/html/indexcp.html
+++ b/src/main/resources/html/indexcp.html
@@ -12,68 +12,145 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-57-precomposed.png" />
     <title>省到家</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <link href="static/css/style.css" type="text/css" rel="stylesheet" />
+    <link href="static/css/shengdaojia/bootstrap.min.css" type="text/css" rel="stylesheet" />
+
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="static/js/shengdaojia/bootstrap.min.js"></script>
+    <script src="static/js/bootstrap/bootstrap-table.js"></script>
+    <script src="static/js/bootstrap/bootstrap-table-zh-CN.min.js"></script>
+    <script src="static/js/bootstrap/bootstrap-select.min.js"></script>
+
+    <script type="text/javascript" src="static/js/index/index.js"></script>
+    <script type="text/javascript" src="static/js/index/indexOperate.js"></script>
+
+    <script src="static/js/common.js"></script>
+    <script src="static/js/messageContent.js"></script>
+
+</head>
+
+
 <style>
+    /*最外层*/
     .div1{
         width: auto;
-        background: #cccccc;
+        margin-left: 10%;
+        margin-right: 10%;
     }
+    /*最上面*/
     .div2{
-        margin-left: 20%;
-        width: 1200px;
-        height: 200px;
-        background: #000000;/*背景色*/
-        float: left;/*div上下*/
+        height: 80px;
+       /*div上下*/
         /*line-height: 400px; 行高*/
        /* font-size: 36px;  文字大小*/
        /* text-align: center;  文字居中*/
     }
-    .div3{
-        margin-left: 20%;
-        width: 1200px;
-        height: auto;
-        background: #4fcc8d;/*背景色*/
-        float: left;/*div上下*/
+    .div21{
+        height: 150px;
+        width: 400px;
     }
+    /*主体*/
     .div31{
-        width: 70%;
+        float: left;
+        width: 800px;
         height: auto;
-        background: #942a25;/*背景色*/
-        float: left;/*div上下*/
     }
-    .div32{
-        width:30%;
+    .div32 {
+        background-color: orange;
+        margin-left: 800px;
         height: auto;
-        background: #9ea6b9;/*背景色*/
-        float: left;/*div上下*/
-        display: inline;
     }
+
     .div4{
-        margin-left: 20%;
-        width: 1200px;
+        width: auto;
         height: 200px;
-        background: #2d6987;/*背景色*/
         float: left;/*div上下*/
     }
-    .div5{
-        margin-left: 20%;
-        width: 1200px;
-        height: 200px;
-        background: #1d9d74;/*背景色*/
-        float: left;/*div上下*/
+    .table th, .table td {
+        padding: 3px;
     }
 
 </style>
 
 <body>
 <div class="div1">
-    <div class="div2">自适应浏览器水平垂直居中</div>
+    <div class="div2">
+        <div class="div21">
+            <a class="logo-img" href="./index.html" title="responsive template"><img src="static/images/background_menu.png" class="logo" alt="Tabulate" /></a>
+        </div>
+    </div>
+        <div class="menu">
+            <ul>
+                <li><a class="hide" href="#">一级菜单</a>
+                    <ul>
+                        <li><a href="#">二级菜单</a></li>
+                        <li><a href="#">二级菜单</a></li>
+                        <li><a href="#">二级菜单</a></li>
+                    </ul>
+                </li>
+                <li><a class="hide" href="#">一级菜单</a>
+                    <ul>
+                        <li><a href="#">二级菜单</a></li>
+                        <li><a href="#">二级菜单</a></li>
+                        <li><a href="#">二级菜单</a></li>
+                    </ul>
+                </li>
+                <li><a class="hide" href="#">一级菜单</a>
+                    <ul>
+                        <li><a href="#">二级菜单</a></li>
+                        <li><a href="#">二级菜单</a></li>
+                        <li><a href="#">二级菜单</a></li>
+                    </ul>
+                </li>
+                <li><a class="hide" href="#">一级菜单</a></li>
+                <div class="clear"></div>
+            </ul>
+
+        </div>
     <div class="div3">
-        <div class="div31">自适应浏览器dddddddddddddddddddddddddddddddddddddddddddddddddddd水平垂直居中</div>
+        <div class="div31">
+             <table id="shengdaojiaTable"></table>
+        </div>
         <div class="div32">自适应浏览 dsf水电费付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付付器水平垂直居中</div>
     </div>
-    <div class="div4">自适应浏览器水平垂直居中</div>
-    <div class="div5">自适应浏览器水平垂直居中</div>
+    <div class="div4">
+        <div class="div41">
+            <h4>关于我们</h4>
+            <br/>
+            牛杂网是中立的网购推荐博客，用心甄选商品，在控制网购风险基础上向网友分享高性价比商品。
+            如觉得〖牛杂网〗不错，请把www.niuza.com推荐给身边的朋友、同学、同事或网友，感谢支持！
+            <br/>
+            <br/>
+            <br/>
+        </div>
+        <div class="div42">Copyright © 2012-2018 省到家 All rights reserved. 备案号号</div>
+    </div>
+
 </div>
 </body>
+<script language="JavaScript">
+
+    $(function() {
+        console.log("第一个$(function(){})中获取文本框的值：");
+        var  uu = $("li a");
+        uu.each(function(){
+             $(this).mouseover(function(){
+                 $(this).css("background-color","yellow")
+             })
+        });
+        uu.each(function(){
+             $(this).mouseout(function(){
+                 $(this).css("background-color","#004B96")
+             })
+        });
+
+    });
+
+
+
+
+
+</script>
 </html>
